# electron-app

./: .gitignore  _headers  netlify.toml  package-lock.json  package.json
src/: main.js  preload.js  test.js
src/addons/test-c/: CMakeLists.txt
src/addons/test-c/src/: test.c
src/addons/test-cpp/: CMakeLists.txt  package-lock.json  package.json
src/addons/test-cpp/src/: test.cpp
src/frontend/: .babelrc  .eslintrc  package-lock.json  package.json  webpack.config.js
src/frontend/src/: index (copy).js  index.js  index.pug  index.scss  test.worker.js
src/frontend/src/cpp/: entry-wasm32.cpp.json  entry-wasm64.cpp.json  genmake.json
src/frontend/src/cpp/src/: entry-wasm32.cpp  entry-wasm64.cpp
